welcome.lessons.welcome.array.has271.Has271.scala.error
has271:5: error: ';' expected but 'true' found.
      retrun true
             ^